changed media query size to avoid gap

--- a/style/board_responsive.css
+++ b/style/board_responsive.css
@@ -66,7 +66,7 @@
 
 }
 
-@media (min-width: 768px) {
+@media (min-width: 767px) {
     .article-bg {
         width: calc(100vw - 247px);
     }
